(untested) Add support for developer app tokens instead of using Web Auth

--- a/mb_CopySpotify.csproj
+++ b/mb_CopySpotify.csproj
@@ -75,25 +75,23 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FuzzyString">
-      <HintPath>C:\Users\trevo\Desktop\MusicBee\Plugins\FuzzyString.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\trevo\Desktop\MusicBee\Plugins\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="SpotifyAPI.Web, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\trevo\Desktop\MusicBee\Plugins\SpotifyAPI.Web.dll</HintPath>
-    </Reference>
-    <Reference Include="SpotifyAPI.Web.Auth">
-      <HintPath>C:\Users\trevo\Desktop\MusicBee\Plugins\SpotifyAPI.Web.Auth.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="FuzzyString">
+      <HintPath>..\..\Desktop\MusicBee\Plugins\FuzzyString.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\Desktop\MusicBee\Plugins\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="SpotifyAPI.Web.Auth">
+      <HintPath>..\..\Desktop\MusicBee\Plugins\SpotifyAPI.Web.Auth.dll</HintPath>
+    </Reference>
+    <Reference Include="SpotifyAPI.Web">
+      <HintPath>..\..\Desktop\MusicBee\Plugins\SpotifyAPI.Web.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MBSong.cs" />
@@ -102,6 +100,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpotifyAuthHandler.cs" />
     <Compile Include="SpotifyItem.cs" />
+    <Compile Include="CustomMsgBox.cs" />
+    <Compile Include="DevTokenForm.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -129,9 +129,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>COPY /Y "$(TargetPath)" "C:\Users\trevo\Desktop\MusicBee\Plugins"</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
