--- a/mb_CopySpotify.csproj
+++ b/mb_CopySpotify.csproj
@@ -11,6 +11,7 @@
     <RootNamespace>MusicBeePlugin</RootNamespace>
     <AssemblyName>mb_CopySpotify</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <LangVersion>latest</LangVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
